--- a/css/index.css
+++ b/css/index.css
@@ -183,12 +183,56 @@ footer nav {
     width: 60%;
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    padding: 20px 2%;
+    align-items: left;
+    padding: 10px 2%;
     font-size: 14px;
 }
 
 footer nav a {
     color: white;
     text-decoration: none;
+}
+
+.container-about-page{
+    padding: 2%;
+    padding-bottom: 5%;
+}
+.box-type-2{
+    display: flex;
+    flex-direction: column;
+    width: 370px;
+    padding: 2%;
+
+}
+hr{
+
+}
+.boxes2{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+
+}
+.button{
+    border: 1.5px solid black;
+    border-radius: 10%;
+    text-align: center;
+    padding: 2%;
+    width: 30%;
+    margin: 3%;
+    background-color: white;
+    opacity: 1;
+    transition: 0.3s;
+    color: black;
+}
+.button:hover{
+    opacity: 0.4;
+}
+.finalstatement{
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    text-align: left;
+    width: 750px;
+    padding: 2%; */
 }
