--- a/css/index.css
+++ b/css/index.css
@@ -197,6 +197,7 @@ footer nav a {
     padding: 2%;
     padding-bottom: 5%;
 }
+
 .box-type-2{
     display: flex;
     flex-direction: column;
@@ -204,15 +205,15 @@ footer nav a {
     padding: 2%;
 
 }
-hr{
 
-}
 .boxes2{
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-
+    justify-items: center;
+    margin-left: 3%;
 }
+
 .button{
     border: 1.5px solid black;
     border-radius: 10%;
@@ -225,14 +226,16 @@ hr{
     transition: 0.3s;
     color: black;
 }
+
 .button:hover{
-    opacity: 0.4;
+    opacity: 0.2;
 }
+
 .finalstatement{
     display: flex;
     flex-direction: column;
     align-items: left;
     text-align: left;
     width: 750px;
-    padding: 2%; */
+    padding: 2%;
 }
